--- a/themes/inhabitent/sass/_typography.scss
+++ b/themes/inhabitent/sass/_typography.scss
@@ -8,7 +8,6 @@ input,
 select,
 textarea {
 	color: $color__text-main;
-	font-family: $font__main;
 	@include font-size(1);
 	line-height: $font__line-height-body;
 }
@@ -77,7 +76,7 @@ h2 {
 	color: #2f1339; 
 	font-family: Novecento Sans Web, sans-serif;
 	font-weight: normal; 
-	font-size: 1.6em;
+	font-size: 1.5em;
 }
 
 h3 {
@@ -121,6 +120,7 @@ button {
 	font-size: 1.2em;
 	font-weight: 600; 
 	line-height: 1.25;
+	letter-spacing: 2px;
 }
 
 .featured-date {
@@ -169,7 +169,7 @@ button {
 	color: #2f1339; 
 	font-family: Novecento Sans Web, sans-serif;
 	font-weight: 400; 
-	font-size: 2.5em;
+	font-size: 2em;
 }
 
 // Shop Page 
